--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -6,7 +6,7 @@
   <h1>{{ group.title }}</h1>
   <p>{{ group.description }}</p>
   
-  {% for post in posts%}
+  {% for post in page_obj  %}
     <ul>
       <li>
         Автор: {{ post.author.get_full_name }}
@@ -22,4 +22,5 @@
       <hr>
     {% endif%}
   {% endfor %}
+  {% include 'posts/includes/paginator.html' %}
 {% endblock%}
