--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %} Последние обновления на сайте {% endblock%}
 {% block content %}  
-  {% for post in posts%}
+  {% for post in page_obj %}
     <ul>
       <li>
         Автор: {{ post.author.get_full_name }}
@@ -20,5 +20,6 @@
       <hr>
     {% endif%}
   {% endfor %}
+  {% include 'posts/includes/paginator.html' %}
 {% endblock%}
 
